[package]
name = "carbonops"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
http = "1"
k8s-openapi = { version = "0.26", features = ["v1_32"] }
kube = { version = "2", features = ["client", "derive", "runtime", "rustls-tls"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
